--- a/firstminiproject/.classpath
+++ b/firstminiproject/.classpath
@@ -6,25 +6,10 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/ora/oraclepki.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/ora/osdt_cert.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/ora/osdt_core.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/ora/ojdbc8.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/agdis/OneDrive/바탕 화면/code/ojdbc8.jar"/>
+	<classpathentry kind="lib" path="C:/Users/agdis/OneDrive/바탕 화면/code/ojdbc10.jar"/>
+	<classpathentry kind="lib" path="C:/Users/agdis/OneDrive/바탕 화면/code/oraclepki.jar"/>
+	<classpathentry kind="lib" path="C:/Users/agdis/OneDrive/바탕 화면/code/osdt_cert.jar"/>
+	<classpathentry kind="lib" path="C:/Users/agdis/OneDrive/바탕 화면/code/osdt_core.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
